--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  
     EJS_player = '#game';
     EJS_core = 'nds';  
-    EJS_gameUrl = 'sm64.nds';
+    EJS_gameUrl = 'SM64.nds';
     EJS_pathtodata = 'https://cdn.jsdelivr.net/gh/ethanaobrien/emulatorjs@main/data/';
  
 </script>
